<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:background="#e57373"
                android:onClick="searchActivity"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:text="@string/search_vaga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="18dp"
                    android:textColor="#000"
                    android:id="@+id/search_vaga"
                    android:textSize="20dp" />


                <ImageView
                    android:src="@drawable/lupa_employment"
                    android:layout_above="@+id/search_vaga"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/lupa"
                    android:layout_width="70dp"
                    android:layout_height="70dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:background="#ffcc80"
                android:onClick="favoriteActivity"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:text="@string/favorite_vaga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="18dp"
                    android:textColor="#000"
                    android:id="@+id/vagasfavoritas"
                    android:textSize="20dp" />


                <ImageView
                    android:src="@drawable/favorite_border"
                    android:layout_above="@+id/vagasfavoritas"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/estrela"
                    android:layout_width="70dp"
                    android:layout_height="70dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:background="#fff59d"
                android:onClick="searchForGraphicActivity"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:text="@string/media_salarial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="18dp"
                    android:textColor="#000"
                    android:id="@+id/mediasalarial"
                    android:textSize="20dp" />

                <ImageView
                    android:src="@drawable/graphic"
                    android:layout_above="@+id/mediasalarial"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/grafico"
                    android:layout_width="70dp"
                    android:layout_height="70dp" /></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:background="#c8e6c9"
                android:onClick="infoActivity"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:text="@string/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="18dp"
                    android:textColor="#000"
                    android:id="@+id/info"
                    android:textSize="20dp" />

                <ImageView
                    android:src="@drawable/about"
                    android:layout_above="@+id/info"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/sobre"
                    android:layout_width="70dp"
                    android:layout_height="70dp" /></LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="trabalho.sine.activity.FragmentDrawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>